<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="thank_you">Thank you!</string>
    <string name="name">Name</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="quantity1">Quantity:</string>
    <string name="order">Order</string>
    <string name="just_java_order_for">JustJava order for</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total: $</string>
</resources>
